# scitex-pd

./: CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  pyproject.toml
.github/workflows/: cla.yml  docs.yml  import-smoke-on-ubuntu-py3-12.yml  newb.yml  pr-ci.yml  publish-pypi.yml  pypi-publish-and-github-release-on-tag.yml  pytest-matrix-on-ubuntu-py3-11-3-12-3-13.yml  release-ci.yml  rtd-sphinx-build-on-ubuntu-latest.yml  scitex-dev-quality-audit-on-ubuntu-latest.yml  sync-main-to-release-tag-on-push.yml
docs/sphinx/: api.rst  conf.py  index.rst
examples/: quickstart.py
src/scitex_pd/: __init__.py  _find_indi.py  _find_pval.py  _force_df.py  _get_unique.py  _ignore_SettingWithCopyWarning.py  _to_xy.py  _unique.py
src/scitex_pd/_convert/: _from_xyz.py  _to_xy.py  _to_xyz.py
src/scitex_pd/_skills/scitex-pd/: 01_installation.md  02_quick-start.md  03_python-api.md  SKILL.md
src/scitex_pd/_sphinx_html/: .buildinfo  api.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
src/scitex_pd/_sphinx_html/.doctrees/: api.doctree  index.doctree
src/scitex_pd/_sphinx_html/.doctrees/api/: scitex_pd.doctree
src/scitex_pd/_sphinx_html/_modules/: index.html
src/scitex_pd/_sphinx_html/_modules/scitex_pd/: _find_indi.html  _find_pval.html  _force_df.html  _get_unique.html  _ignore_SettingWithCopyWarning.html  _melt_cols.html  _merge_columns.html  _mv.html  _replace.html  _round.html  _slice.html  _sort.html
src/scitex_pd/_sphinx_html/_modules/scitex_pd/_convert/: _from_xyz.html  _to_numeric.html  _to_xy.html  _to_xyz.html
src/scitex_pd/_sphinx_html/_sources/: api.rst.txt
src/scitex_pd/_sphinx_html/_sources/api/: scitex_pd.rst.txt
src/scitex_pd/_sphinx_html/api/: scitex_pd.html
tests/: _helpers.py  conftest.py
tests/develop/: test_audit.py
tests/examples/: test_quickstart.py
tests/integration/: test_examples.py
tests/scitex_pd/: test___init__.py  test__find_indi.py  test__find_pval.py  test__force_df.py  test__get_unique.py  test__ignore_SettingWithCopyWarning.py  test__melt_cols.py  test__merge_columns.py  test__mv.py  test__replace.py  test__round.py  test__slice.py  test__sort.py  test__unique.py
tests/scitex_pd/_convert/: test__from_xyz.py  test__to_numeric.py  test__to_xy.py  test__to_xyz.py
