[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scitex-pd"
version = "0.1.4"
description = "Pandas helpers (force_df, melt_cols, find_pval, mv, slice, sort, round, …) — standalone module from the SciTeX ecosystem"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
authors = [{name = "Yusuke Watanabe", email = "noreply@scitex.ai"}]
keywords = ["scitex", "pandas", "dataframe", "data-frame"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "pandas",
    "scitex-types>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "scitex-dev>=0.11.7",
]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinx-autodoc-typehints>=1.25",
]
all = [
    "scitex-pd[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/ywatanabe1989/scitex-pd"
Repository = "https://github.com/ywatanabe1989/scitex-pd"
Documentation = "https://scitex-pd.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scitex_pd = ["_skills/**/*.md"]

[project.entry-points."scitex_dev.skills"]
scitex-pd = "scitex_pd"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--disable-warnings"]

[tool.ruff]
target-version = "py39"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I"]
ignore = ["E501"]

[tool.scitex-linter]
library_dirs = ["src", "tests", "examples", "apps", "config", "docs"]
